<resources>
    <string name="app_name">Tap \'n\' Turn</string>
    <string name="action_settings">Settings</string>
    <string name="notification_service_active">Tap \'n\' Turn running and activated!</string>
    <string name="notification_service_not_active">Tap \'n\' Turn running but deactivated!</string>
    <string name="toast_service_stopped">Tap \'n\' Turn Service Stopped</string>
    <string name="toast_service_started">Tap \'n\' Turn Service Started</string>
    <string name="touch_to_disable">Touch to deactivate</string>
    <string name="touch_to_enable">Touch to activate</string>
    <string name="service_running">Tap \'n\' Turn Service Running</string>
    <string name="request_permission">Request Permission</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_missing">Permission is missing, cannot start service!</string>
    <string name="use_reverse_portrait_label">Use Reverse Portrait</string>
    <string name="start_on_boot_label">Automatically start on boot</string>
    <string name="left_handed_mode">Left Handed Mode</string>
    <string name="introduction">Tap \'n\' Turn should be run with auto-rotation enabled. It will enforce the user selected orientation by drawing an invisible overlay over the screen. That is why it needs that permission. You can temporarily enable/disable the screen overlay by touching the notification.</string>
    <string name="introduction_title">Introduction</string>
    <string name="configuration_title">Configuration</string>
    <string name="service_setup_title">Service Setup</string>
    <string name="icon_size">Icon Size</string>
    <string name="icon_timeout">Icon Timeout</string>
    <string name="restore_default_orientation_screen_off_label" >Restore default orientation on screen off</string>
    <string name="permission_lost">Tap \'n\' Turn disabled: permission to draw overlays got lost!</string>
    <string name="auto_return_default">Automatically return to default orientation</string>
    <string name="about_text"><![CDATA[
<h1>Tap\'n\'Turn v%1$s</h1>
<h4>A small and handy screen orientation utility.</h4>

<p>Thank you for using  <a href="https://gabm.github.io/TapAndTurn">Tap\'n\'Turn!</a> This app is a community project and has been originally created by Matthias Gabriel.</p>

<p>If you want to participate in the development of Tap\'n\'Turn by submitting code, artwork, translations or reporting bugs, then please use our project page on <a href="https://github.com/gabm/TapAndTurn">GitHub</a>. Further we have a <a href="https://riot.im">riot.im</a> channel under #TapAndTurn:matrix.org open for discussion.</p>

<h2>License</h2>
<p>The source code of Tap\'n\'Turn is released to public domain under the terms of the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPLv3</a> or newer.</p>

<p>The trademarks \"Tap\'n\'Turn\" as well as similar identifiers like \"TapAndTurn\", \"Tap and Turn\" are owned by Matthias Gabriel. All rights are reserved. The preferred written from is \"Tap\'n\'Turn\". These trademarks are used to refer to the source code, the binary releases as well as the community (herafter: "the Project"). You are granted the right to use these trademarks to refer to the Project in discussions, documentations and written publications. You may not use these trademarks for binary releases without permit by the original author. If you want to distribute derived work, you have to use a different name.</p>

<h2>Libraries</h2>

<p>\"Tap\'n\'Turn\" makes great use of the <a href="https://github.com/jaredrummler/ColorPicker">Color Picker</a> library, which is developed and released by Jared Rummler
 and his contributors. Further TnT is using <a href="https://github.com/MrBIMC/MaterialSeekBarPreference">MaterialSeekBarPreference</a> by Pavel Sikun and contributors. Both libraries are released under Apache License 2.0.

<h2>Contact</h2>
You can contact me via mail gabmtuc <at> gmail <dot> com or at <a href="https://riot.im">riot.im</a> under @gabm:matrix.org.

]]></string>
    <string name="logging">Enable Debug Logging </string>
</resources>
