<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gabm.tapandturn.ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduction_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
        style="@style/LinearLayoutChild"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        style="@style/LinearLayoutChild"
        />
    <Switch
        android:id="@+id/service_state_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_running"
        style="@style/LinearLayoutChild"
        />
    <Button
        android:id="@+id/request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_permission"
        style="@style/LinearLayoutChild"
        />

    <TextView
        android:text="Icon Size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
        android:id="@+id/icon_size_text"
        style="@style/LinearLayoutChild"
        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/icon_size_seekbar"
        android:max="100"
        android:progress="20"
        style="@style/LinearLayoutChild"
        />

    <TextView
        android:text="Icon Timeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
        android:id="@+id/icon_timeout_text"
        style="@style/LinearLayoutChild"
        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/icon_timeout_seekbar"
        android:max="8000"
        android:progress="500"
        style="@style/LinearLayoutChild"
        />
    <Switch
        android:id="@+id/use_reverse_portrait_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_reverse_portrait_label"
        style="@style/LinearLayoutChild"
        />
    <Switch
        android:id="@+id/left_handed_mode_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/left_handed_mode"
        style="@style/LinearLayoutChild"
        />
    <Switch
        android:id="@+id/start_on_boot_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_on_boot_label"
        style="@style/LinearLayoutChild"
        />
</LinearLayout>
